--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: Empire4Evr
+author: Jaflobius
+email: jrc161830@utdallas.edu
+theme: minima
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
